2012-12-11  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod_speaker.c (cerebrod_speaker): Add additional
	workaround for gettimeofday problem.

	* Rename --with-gettimeofday-retry to --with-gettimeofday-workaround.

2012-11-12  Albert Chu  <chu11@llnl.gov>
	
	* src/libs/wrappers/wrappers.c (wrap_gettimeofday): Update log
	message with more detail.

2012-11-09  Albert Chu  <chu11@llnl.gov>

	Support gettimeofday retry configuration option to work around
	issue on a number of Intel motherboards.

	* config/ac_gettimeofday_retry.m4: New file

	* src/libs/wrappers/wrappers.c (wrap_gettimeofday): Support
	workaround.
	
2012-10-04  Albert Chu  <chu11@llnl.gov>
	
	* META, NEWS: update for release

	* tagged cerebro-1-16-1

2012-10-04  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_debug.h: New file.

	* src/cerebrod/: Do not allow debug messages to output unless
	running in foreground.
	
2012-09-26  Albert Chu  <chu11@llnl.gov>
	
	* META, NEWS: update for release

	* tagged cerebro-1-15-1
	
2012-09-25  Albert Chu  <chu11@llnl.gov>
	
	* cerebrod/: Support -d and -c in production builds of cerebrod,
	including useful debug flags in cerebro.conf.

	* src/libs/debug/debug.h: Output more debugging information in
	production builds.
	
2012-03-02  Albert Chu  <chu11@llnl.gov>

	* src/libs/common/error.h, src/libs/common/error.c
	(err_init_exit_value): New function.
	
2011-11-07  Albert Chu  <chu11@llnl.gov>

	* META, NEWS: update for release

	* tagged cerebro-1-14-1

2011-11-07  Albert Chu  <chu11@llnl.gov>

	* Additional doc updates.

	* man/cerebro.7: Removed and replaced with cerebro.7.in.

	* configure.ac: Update appropriately for generated manpage.
	
2011-11-07  Albert Chu  <chu11@llnl.gov>

	* META, NEWS: update for release

	* tagged cerebro-1-13-1

2011-11-07 Albert Chu  <chu11@llnl.gov>

	* Various manpage updates.
	
2011-10-21 Albert Chu  <chu11@llnl.gov>

	* Update copyright years globally.
	
2011-07-08 Frederik Ferner <frederik.ferner@diamond.ac.uk>
